--- a/index.html
+++ b/index.html
@@ -16,25 +16,29 @@
   </style>
 </head>
 <body>
-
+<main>
  <div id="intro">
+  <div class="intro-content">
+
+      <img src="./assets/images/image-omelette.jpeg" alt="" srcset="">
       <h1>Simple Omelette Recipe</h1>
 
       <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
       to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-
-    <div class="intro-content">    
+  </div>
+  <div class="prep">    
       <h4>Preparation time</h4>
+      <ul class="prep-list">
+        <li>Total: Approximately 10 minutes</li>
+        <li>Preparation: 5 minutes</li>
+        <li>Cooking: 5 minutes</li>
+      </ul>
 
-      <p> 
-      Total: Approximately 10 minutes
-      Preparation: 5 minutes
-      Cooking: 5 minutes
-      </p>
-    </div>   
-  </div>    
+      
+  </div>   
+</div>    
 
-  <main>
+  
 
     <h2>Ingredients</h2>
 
@@ -77,7 +81,7 @@
 
     Fat
     22g
-  </main>
+</main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
