added background color to prep

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <div id="intro">
   <div class="intro-content">
 
-      <img src="./assets/images/image-omelette.jpeg" alt="" srcset="">
+      <img src="./assets/images/image-omelette.jpeg" alt="Omelette on a plate with sauce">
       <h1>Simple Omelette Recipe</h1>
 
       <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
