--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
   <!-- Nutrition Section -->
   <div class="nutrition">
-      Nutrition
+      <h2>Nutrition</h2>
 
-      The table below shows nutritional values per serving without the additional fillings.
+      <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
       Calories
       277kcal
