.ingredients h2 -color changed
.ingredients-list
-text align left

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Ingredients Section -->
   <div class="ingredients">
       <h2>Ingredients</h2>
-      <ul>
+      <ul class="ingredients-list">
           <li>2-3 large eggs</li>
           <li> Salt, to taste</li>
           <li>Pepper, to taste</li>
@@ -55,7 +55,7 @@
   <!-- Instruction Section -->
   <div class="instruction">
       <h2>Instructions</h2>
-      <ul>
+      <ul class="instruction-list">
         <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
           You can add a tablespoon of water or milk for a fluffier texture.</li>
         <li>  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
