html -added .border under ingredients and instructions
CSS .border
-added top padding
-added bottom border
-added width and opacity
-added display block and margin auto

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </ul>
   </div>    
 
-
+  <div class="border"></div>
   <!-- Nutrition Section -->
   <div class="nutrition">
       <h2>Nutrition</h2>
