CSS -added letter spacing to h1 and h2 tags -added line height to all ul lists -added bottom padding to ul lists

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
   <div class="instruction">
       <h2>Instructions</h2>
       <ul class="instruction-list">
-        <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-          You can add a tablespoon of water or milk for a fluffier texture.</li>
-        <li>  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+        <li><span>Beat the egg</span>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+        <li> <span>Heat the pan</span>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
         <li>  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
           the eggs evenly coat the surface.</li>
         <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
