--- a/index.html
+++ b/index.html
@@ -69,23 +69,32 @@
   </div>    
 
   <div class="border"></div>
+
   <!-- Nutrition Section -->
   <div class="nutrition">
       <h2>Nutrition</h2>
 
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
-      Calories
-      277kcal
+      <div class="nutrition-table">
+        <p>Calories</p>
+        <span class="measurements">277kcal</span>
+      </div>
 
-      Carbs
-      0g
+      <div class="nutrition-table">
+        <p>Carbs</p>
+        <span class="measurements">0g</span>
+      </div>
 
-      Protein
-      20g
+      <div class="nutrition-table">
+        <p>Protein</p>
+        <span class="measurements">20g</span>
+      </div>
 
-      Fat
-      22g
+      <div class="nutrition-table">
+        <p>Fat</p>
+        <span class="measurements">22g</span>
+      </div>
   </div>    
 
 </main>
