css - made text align left -.measurements added font weight bold and color

--- a/index.html
+++ b/index.html
@@ -73,35 +73,46 @@
   <!-- Nutrition Section -->
   <div class="nutrition">
       <h2>Nutrition</h2>
-
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
       <div class="nutrition-table">
         <p>Calories</p>
-        <span class="measurements">277kcal</span>
+        <p><span class="measurements">277kcal</span></p>
       </div>
+
+      <div class="border"></div>
 
       <div class="nutrition-table">
         <p>Carbs</p>
-        <span class="measurements">0g</span>
+        <p><span class="measurements">0g</span></p>
       </div>
+
+      <div class="border"></div>
 
       <div class="nutrition-table">
         <p>Protein</p>
-        <span class="measurements">20g</span>
+        <p><span class="measurements">20g</span></p>
       </div>
+
+      <div class="border"></div>
 
       <div class="nutrition-table">
         <p>Fat</p>
-        <span class="measurements">22g</span>
+        <p><span class="measurements">22g</span></p>
       </div>
+
   </div>    
 
 </main>
-  
+
+<!-- Footer Section -->
+
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">chilledoutluke</a>.
   </div>
+</footer>
+
 </body>
 </html>
